[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/signpost.png" type="Texture" id=1]
[ext_resource path="res://Fonts/TovariSans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TextTip.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 422.47, 186.888 )

[node name="TextTip1" type="Position2D"]
position = Vector2( 298.898, 885.363 )
z_index = -1
script = ExtResource( 3 )

[node name="TextPos" type="Position2D" parent="."]
scale = Vector2( 0.7, 0.7 )

[node name="RichTextLabel" type="RichTextLabel" parent="TextPos"]
margin_left = -59.0
margin_top = -48.0
margin_right = 61.0
margin_bottom = -11.0
grow_vertical = 0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TextPos"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.208008, 9.99854 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="Sprite"]
position = Vector2( 3.75, -22.5 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/PlayerDetector"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Sprite/PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="Sprite/PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
